# salon_ai_supervisor

./: README.md  pyproject.toml
src/: main.py
src/core/: config.py  dependencies.py  logging.py
src/database/: help_requests.sql  knowledge_base.sql
src/models/: schemas.py
src/routers/: help_request.py  knowledge_base.py  livekit.py
src/services/: __init__.py  agent.py  help_request.py  knowledge_base.py
src/static/: admin_panel.html  phone_call_sim.html
